--- a/index.html
+++ b/index.html
@@ -67,7 +67,38 @@
 
         <div class="right"></div>
 
+
+        <!-- ----------------------------------------------------2nd part -->
+
+      
     </div>
+
+
+    <div class="mainSecond">
+
+
+                <div class="leftSecond">
+                    <div class="imgDiv"></div>
+                    </div>
+
+
+
+                    <div class="rightSecond">
+                        <h1 class="aboutME">About Me</h1>
+                        <p class="paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni sunt, provident necessitatibus blanditiis nesciunt beatae sint illo vel velit? Nesciunt animi laboriosam asperiores neque enim voluptate delectus a, odit similique at rerum nam beatae sint voluptatem, facere consequuntur voluptatum. Doloremque consequuntur pariatur quo nulla ullam minus nam illum. Non molestias optio rem deleniti distinctio labore iure consectetur nisi obcaecati perferendis repellendus placeat similique enim alias, culpa dignissimos voluptas illum eveniet minima pariatur, sequi impedit est architecto. Unde deserunt corrupti voluptate dignissimos velit labore, !</p>
+
+                        <div class="skilExp">
+
+                            <div class="tab-link active-link">Skills</div>
+                            <div class="tab-link">Experience</div>
+                            <div class="tab-link">Education</div>
+
+                            
+                        </div>
+                    </div>
+
+    </div>
+ 
 
 </body>
 </html>
